# ugv-mission-planner

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/: streamlit_app.py
docs/: UGV_POLICY.md
examples/maps/: corridor.npy  generate_maps.py  open_area.npy  with_block.npy
examples/missions/: patrol_avoid_zone.json
interfaces/schemas/: mission_plan.schema.json
schemas/: mission_plan.schema.json
scripts/: export_schema.py  live_openai_tests.py  plot_sim.py  run_from_nl.py  run_local.py  simulate_from_nl.py  verify_from_nl.py
src/ugv_mission_planner/: executor.py  models.py  planner.py
src/ugv_mission_planner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ugv_mission_planner/genai/: llm_client.py
src/ugv_mission_planner/models/: __init__.py  itinerary.py  mission_plan.py
src/ugv_mission_planner/nl/: nl_mission.py
src/ugv_mission_planner/pipeline/: plan_and_execute.py
src/ugv_mission_planner/policy/: rag.py
src/ugv_mission_planner/report/: mission_brief.py
src/ugv_mission_planner/runner/: leg_runner.py
src/ugv_mission_planner/supervisor/: supervisor.py
src/ugv_mission_planner/utils/: trace.py
src/ugv_mission_planner/verify/: compliance.py
src/ugv_mission_planner/vis/: anim.py  animate.py
tests/: test_cli_dry.py  test_compliance_one_obstacle.py  test_compliance_two_obstacles.py  test_constraints_battery_default.py  test_constraints_battery_none_default.py  test_executor_sim.py  test_mission_brief_snapshot.py  test_models.py  test_nl_parse_invalid.py  test_nl_parse_success.py  test_planner_deterministic.py  test_policy_rag.py  test_schema_json.py  test_supervisor.py  test_supervisor_near_geofence.py
tests/snapshots/: brief_basic.md
