[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ugv-mission-planner"
version = "0.1.0"
description = "GenAI-guarded UGV mission planner: NL → policy-compliant plan → deterministic execution"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]
keywords = ["UGV", "mission planning", "GenAI", "A*", "safety", "RAG"]

# Minimal deps to start
dependencies = [
  "pydantic>=2.5",
  "numpy>=1.26",
  "jsonschema>=4.20",
  "matplotlib>=3.8"
]

[project.optional-dependencies]
genai = [
  "openai>=1.40",
  "langchain>=0.2.0",
  "langgraph>=0.1.0"
]

dev = [
  "pytest>=8",
  "ruff>=0.4",
  "mypy>=1.8",
  "types-jsonschema>=4.23.0"
]

[tool.mypy]
python_version = "3.11"
exclude = ["^tests/"]
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests", "tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["matplotlib", "matplotlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ugv_mission_planner", "ugv_mission_planner.*"]
implicit_reexport = true