[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ugv-mission-planner"
version = "0.1.0"
description = "UGV Mission Planner (GenAI-Guarded): NL → MissionPlan → deterministic A* with policy guardrails"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Youssef Lachhab" }]

dependencies = [
  "numpy>=1.24",
  "pydantic>=2.6",
  "matplotlib>=3.7",
  "jsonschema>=4.20",
  "networkx>=3.1",
  "pillow>=10.0",
  "imageio",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.8",
  "types-jsonschema",
]
genai = [
  "langchain-openai>=0.3.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
filterwarnings = [
  "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
# Enable import sorting
isort = { known-first-party = ["ugv_mission_planner"] }

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true
